--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "es6-promise": "^4.2.8",
+    "isomorphic-fetch": "^2.2.1",
     "next": "9.4.1",
+    "node-fetch": "latest",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
