--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "ed-grid": "^2.9.0",
+    "edteam-style-guides": "^0.0.66",
     "es6-promise": "^4.2.8",
     "isomorphic-fetch": "^2.2.1",
     "next": "9.4.1",
     "node-fetch": "latest",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "sass": "^1.26.5"
   }
 }
